--- a/templates/search.html
+++ b/templates/search.html
@@ -14,9 +14,6 @@
         padding: 10px;
         margin-bottom: 20px;
       }
-      li {
-        margin-bottom: 10px;
-      }
       ul {
         display: flex;
         flex-wrap: wrap;
@@ -24,18 +21,20 @@
         padding: 0;
         list-style: none;
       }
-
+      li {
+        margin-bottom: 10px;
+      }
       .usuario-item {
         background: #000000;
         border-radius: 12px;
         padding: 10px 15px;
-        border: 2px solid gray;
-        color: white;
-        cursor: pointer;
+        display: inline-block;
+        gap: 5px;
+        border: #555555 1px;
         transition: background-color 0.2s;
       }
       .usuario-item:hover {
-        background-color: #222222;
+        background: #ffffff;
       }
       .usuario-item a {
         color: #ff0000;
